--- a/1-create-app-from-docker-image.adoc
+++ b/1-create-app-from-docker-image.adoc
@@ -115,10 +115,10 @@ NOTE: The `--hostname` attribute in the command below is not required properly a
 a wildcard dns in our cluster, in our case it is `*.{{APPS_ADDRESS}}`, so if you skip using it, your route is going to be defined by OpenShift.
 
 ----
-$ oc expose service welcome --name=welcome --hostname=welcome.userxx.{{APPS_ADDRESS}}
+$ oc expose service welcome --name=welcome --hostname=welcome.user-xx.{{APPS_ADDRESS}}
 
 NAME      HOST/PORT                     PATH      SERVICE   LABELS
-welcome   welcome.userxx.{{APPS_ADDRESS}}             welcome
+welcome   welcome.user-xx.{{APPS_ADDRESS}}             welcome
 ----
 
 *Step 4: Try your application*
@@ -126,7 +126,7 @@ welcome   welcome.userxx.{{APPS_ADDRESS}}             welcome
 Now access the application using curl (looking for 200 status code) or from the browser and see the result.
 
 ----
-$ curl -Is http://welcome.userxx.{{APPS_ADDRESS}}
+$ curl -Is http://welcome.user-xx.{{APPS_ADDRESS}}
 ----
 
 Voila!! you created your first application using an existing docker
@@ -149,7 +149,7 @@ welcome   ConfigChange, ImageChange   1
 CONTROLLER   CONTAINER(S)   IMAGE(S)                             SELECTOR                                        REPLICAS
 welcome-1    welcome        redhatworkshops/welcome-php:latest   deployment=welcome-1,deploymentconfig=welcome   1
 NAME      HOST/PORT                     PATH      SERVICE   LABELS
-welcome   welcome.userxx.{{APPS_ADDRESS}}             welcome
+welcome   welcome.user-xx.{{APPS_ADDRESS}}             welcome
 NAME      LABELS    SELECTOR                   IP(S)           PORT(S)
 welcome   <none>    deploymentconfig=welcome   172.30.155.37   80/TCP
 NAME              READY     REASON    RESTARTS   AGE
